don't load the html directly when you have a server dufus

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,5 +12,6 @@
   <body>
     <div id="map"></div>
     <select id="country-select"></select>
+    <select id="bucket-list-select"></select>
   </body>
 </html>
